<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="contactTrackerViewModel"
            type="com.example.android.happybirthdates.contacttracker.ContactTrackerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".contacttracker.ContactTrackerFragment">

        <Button
            android:id="@+id/buttonCreate"
            style="@style/ContactButtons"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:onClick="@{() -> contactTrackerViewModel.onCreateTracking()}"
            android:text="@string/create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/alarmToggle"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:textOff="@string/alarm_off"
            android:textOn="@string/alarm_on"
            app:layout_constraintEnd_toStartOf="@+id/buttonStorage"
            app:layout_constraintHorizontal_bias="0.568"
            app:layout_constraintStart_toEndOf="@+id/buttonCreate"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonStorage"
            style="@style/ContactButtons"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:onClick="@{() -> contactTrackerViewModel.onStorageTracking()}"
            android:text="@string/storage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.847"
            app:layout_constraintStart_toEndOf="@+id/buttonCreate"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNotificationFrequency"
            android:textSize="20sp"
            android:fontFamily="@font/roboto"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:layout_width="362dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="Notification frequency: 1 min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarmToggle" />

        <SeekBar
            android:id="@+id/seekBarNotificationFrequency"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:paddingLeft="60sp"
            android:paddingRight="60sp"
            android:layout_width="362dp"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:max="4"
            android:progress="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNotificationFrequency" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewContactListGrid"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarNotificationFrequency" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
